--- a/GenericHID/Programmer/Programmer.vcproj
+++ b/GenericHID/Programmer/Programmer.vcproj
@@ -176,6 +176,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\AtJniIsp.h"
+				>
+			</File>
+			<File
 				RelativePath=".\flip.h"
 				>
 			</File>
