--- a/GenericHID/clprogram/CLProgram.vcproj
+++ b/GenericHID/clprogram/CLProgram.vcproj
@@ -133,7 +133,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies=" qtmaind.lib QtCored4.lib"
+				AdditionalDependencies="qtmaind.lib QtCored4.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="true"
