--- a/GenericHID/dfuprogrammer/dfuprogrammer.vcproj
+++ b/GenericHID/dfuprogrammer/dfuprogrammer.vcproj
@@ -284,6 +284,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\dfucommon.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dfuprogrammer.h"
 				>
 			</File>
