--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -198,6 +198,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\shape.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\shapecollection.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
@@ -322,6 +330,14 @@
 						Outputs="&quot;.\GeneratedFiles\$(ConfigurationName)\moc_$(InputName).cpp&quot;"
 					/>
 				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\shape.h"
+				>
+			</File>
+			<File
+				RelativePath=".\shapecollection.h"
+				>
 			</File>
 			<File
 				RelativePath=".\stdafx.h"
