--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -836,6 +836,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="Data"
+			>
+			<File
+				RelativePath=".\config.xml"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 		<Global
