--- a/GenericHID/utility/utility.vcproj
+++ b/GenericHID/utility/utility.vcproj
@@ -213,6 +213,10 @@
 		<Filter
 			Name="Generated Files"
 			>
+			<File
+				RelativePath=".\generatedfiles\qrc_utility.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resources"
